force-app/main/default/objects/Plantillas__c/Plantillas__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Plantillas</label>
</CustomObject>