force-app/main/default/objects/Plantillas__c/fields/AMN_00__c.field-meta.xml
<CustomField>
    <fullName>AMN_00__c</fullName>
    <label>AMN Canal 00</label>
    <length>255</length>
    <type>Text</type>
</CustomField>