force-app/main/default/objects/Plantillas__c/fields/AMN_05__c.field-meta.xml
<CustomField>
    <fullName>AMN_05__c</fullName>
    <label>AMN Canal 05</label>
    <length>255</length>
    <type>Text</type>
</CustomField>