force-app/main/default/objects/Plantillas__c/fields/NuBa_00__c.field-meta.xml
<CustomField>
    <fullName>NuBa_00__c</fullName>
    <label>NuBa Canal 00</label>
    <length>255</length>
    <type>Text</type>
</CustomField>