force-app/main/default/objects/Plantillas__c/fields/NuBa_05__c.field-meta.xml
<CustomField>
    <fullName>NuBa_05__c</fullName>
    <label>NuBa Canal 05</label>
    <length>255</length>
    <type>Text</type>
</CustomField>